# MySMOT

./: .gitignore  README.md  pyproject.toml
examples/: run_bensmot_real.py  run_bensmot_stage0.py  run_stage0.py
smot/: __init__.py  _geometry.py  canonical_labels.py  eval.py  event_filter.py  fact_norm.py  fact_selector.py  frame_features.py  kfa.py  mllm.py  motion_facts.py  output_assembler.py  pair_features.py  pipeline.py  projector.py  prompts.py  track_matching.py  tracker.py  types.py
smot/datasets/: __init__.py  bensmot.py
smot/ml/: __init__.py  checkpoint.py  fact_selector.py  feature_cache.py  frames.py  gradient_check.py  pairwise_kfa.py  projector.py  qwen_adapter.py  training.py  unary_kfa.py
tests/: fixtures.py  test_bensmot_converter.py  test_eval.py  test_event_filter.py  test_fact_norm.py  test_fact_selector_stub.py  test_feature_cache.py  test_frame_features.py  test_kfa_stub.py  test_ml_modules.py  test_motion_facts.py  test_output_assembler.py  test_output_assembler_json.py  test_pair_features.py  test_pipeline_stage0_integration.py  test_pipeline_stage1_seams.py  test_track_matching.py  test_types.py
